--- a/Exercises/2021-02-03/form1/form1.css
+++ b/Exercises/2021-02-03/form1/form1.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    text-transform: capitalize;
 }
 
 body {
@@ -69,4 +70,9 @@ input[type=submit], input[type=reset] {
     color: red;
     margin: 0;
     margin-top: 2px;
+}
+
+.sub {
+    text-align: center;
+    color: red;
 }
