--- a/Exercises/2021-02-08/webapp/css/contacts.css
+++ b/Exercises/2021-02-08/webapp/css/contacts.css
@@ -12,6 +12,13 @@ a {
     margin-bottom: 10px;
 }
 
+.success-msg {
+    display: inline-block;
+    margin-left: 20px;
+    font-size: 1.2rem;
+    color: green;
+    font-weight: 700;}
+
 table {
     width: 100%;
     border-collapse: collapse;
