--- a/php_core/css/nav.css
+++ b/php_core/css/nav.css
@@ -1,5 +1,4 @@
 nav {
-    background-color: #426BA4;
     padding: 15px 30px;
     display: flex;
     flex-direction: row;
@@ -12,25 +11,22 @@ nav {
 
 .nav-item {
     display: inline-block;
-    height: 30px;
-    color: #C4D1E3;
     margin-left: 25px;
-}
-
-.icon {
-    font-size: 18px import !important;
-    vertical-align: middle;
-    margin-right: 5px;
+    color: olive;
+    border-radius: 5px;
+    padding: 5px;
+    background-color: #B6D7A8;
 }
 
 .title {
     font-size: 2rem;
+    background: none !important;
 }
 
 .nav-item a {
-    display: inline-block;
+    display: block;
     text-decoration: none;
-    color: #C4D1E3;
-    font-size: 20px;
+    color: olive;
+    background-color: #B6D7A8;
 }
 
